--- a/projects.html
+++ b/projects.html
@@ -2,13 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris_Vann_Website</title>
+    <title>Projects_Page</title>
     <link rel="stylesheet" href= "styles.css">
 </head>
 <body>
-    <h1>Chris_Vann</h1>
-    <p>This is my personal website</p>
-    <a href ="/contact.html"></a>
-    <a href ="/projects.html"></a>
+    <h1>Projects Page</h1>
+    <p>Eyetracking Fixation Project</p>
 </body>
 </html>
