--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Chris_Vann</h1>
     <p>This is my personal website</p>
-    <a href ="/contact.html"></a>
-    <a href ="/projects.html"></a>
+    <a href ="/contact.html">Contact</a>
+    <a href ="/projects.html">Projects</a>
 </body>
 </html>
