--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href= "styles.css">
 </head>
 <body>
-    <h1>Chris_Vann</h1>
+    <h1>Chris Vann Information Website</h1>
     <a href ="/contact.html">Contact</a>
     <a href ="/projects.html">Projects</a>
 </body>
