--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Chris Vann Information Website</h1>
+    <p><i>Links To Other Pages</i>></p>
     <a href ="/contact.html">Contact</a>
     <a href ="/projects.html">Projects</a>
 </body>
