--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
-<html lang="en">
+<!DOCTYPE html> 
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris_Vann_Website</title>
-    <link rel="stylesheet" href= "styles.css">
+    <title> Portfolio Website</title>
+    <link rel - "stylesheet" type = "text/css" href = "css/style.css">
+    <link rel = "preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200
+    ;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" = rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>Chris Vann Information Website</h1>
-    <p><i>Links To Other Pages</i></p>
-    <a href ="/contact.html">Contact</a>
-    <a href ="/projects.html">Projects</a>
+    <!---hero Section start--->
+    <div class="hero">
+        <nav>
+            <h2 class="logo">Portfolio</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <a href="#" class = "btn">Subscribe</a>
+        </nav>
+    </div>
+    
 </body>
 </html>
