--- a/index.html
+++ b/index.html
@@ -13,16 +13,28 @@
     <!---hero Section start--->
     <div class="hero">
         <nav>
-            <h2 class="logo">Portfolio</h2>
+            <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
             <a href="#" class = "btn">Subscribe</a>
         </nav>
+
+        <div class = "content">
+            <h4>Hello, my name is</h4>
+            <h1>Chris Vann</h1>
+            <h3>Computer Science Student at The College of Wooster.</h3>
+            <div> class = "newslatter"
+                <form>
+                    <input type = "email" name = "email" id = "mail" placeholder = "Enter Your Email">
+                    <input type = "submit" name = "submit" value = "Lets Start">
+                </form>
+            </div>
+        </div>
     </div>
     
 </body>
