--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h4>Hello, my name is</h4>
             <h1>Chris Vann</h1>
             <h3>Computer Science Student at The College of Wooster.</h3>
-            <div> class = "newslatter"
+            <div class = "newslatter">
                 <form>
                     <input type = "email" name = "email" id = "mail" placeholder = "Enter Your Email">
                     <input type = "submit" name = "submit" value = "Lets Start">
