--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <a href="#" class = "btn">Subscribe</a>
+            <a href="#" class = "btn">About me</a>
         </nav>
 
         <div class = "content">
             <h4>Hello, my name is</h4>
-            <h1>Chris Vann</h1>
+            <h1>Chris <span>Vann</span></h1>
             <h3>Computer Science Student at The College of Wooster.</h3>
             <div class = "newslatter">
                 <form>
@@ -37,5 +36,21 @@
         </div>
     </div>
     
+    <!----About Section Start-->
+
+    <section class="about">
+        <div class = "main">
+            <img src="about.jpg">
+            <div class = "about-text">
+                <h2>About Me</h2>
+                <h5>Computer Science <span>Student</span></h5>
+                <p> I am pursuing a career in computer science. I have proficient in the coding languages of Python, C, and SQL and I have 
+                    experience with HTML and CSS. Additionally, I have experience with database systems through my research relating to 
+                    eyetracking fixations... gotta write more later </p>
+                    <button type= "button">Let's Talk</button>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
