--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class = "content">
             <h4>Hello, my name is</h4>
-            <h1>Chris <span>Vann</span></h1>
+            <h1>Christopher <span>Vann</span></h1>
             <h3>Computer Science Student at The College of Wooster.</h3>
             <div class = "newslatter">
                 <form>
