--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="about">
         <div class = "main">
-            <img color="about1.jpg">
+            <img src="about1.jpg">
             <div class = "about-text">
                 <h2>About Me</h2>
                 <h5>Computer Science <span>Student</span></h5>
