--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="about">
         <div class = "main">
-            <img src="about2.jpg">
+            <!-- <img src="about2.jpg"> -->
             <div class = "about-text">
                 <h2>About Me</h2>
                 <h5>Computer Science <span>Student</span></h5>
