--- a/index.html
+++ b/index.html
@@ -52,5 +52,23 @@
         </div>
 
     </section>
+
+    <!---Contact Me----->
+    <div class="contact-me">
+        <p>Contact Page.</p>
+        <a class ="button-two" href = "#">Contact Information</a>
+    </div>
+
+    <!---footer start---->
+    <footer>
+        <p>Christopher Vann Additional Information</p>
+        <div class = "social">
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    <!-- Make this section for Github and linkedin learning link -->
+    <p class = "end">Website Created By Christopher Vann</p>
+    </footer>
 </body>
 </html>
