--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!---Contact Me----->
     <div class="contact-me">
-        <p>Contact Page.</p>
+        <p>Contact Page</p>
         <a class ="button-two" href = "#">Contact Information</a>
     </div>
 
