--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!---hero Section start--->
     <div class="hero">
         <nav>
-            <h2 class="logo">Portfo<span>lio</span></h2>
+            <h2 class="logo">My<span>Portfolio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Projects</a></li>
