--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h2 class="logo">My<span>Portfolio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="#" class = "btn">About me</a>
         </nav>
