--- a/contact.html
+++ b/contact.html
@@ -23,21 +23,21 @@
             <a href="#" class = "btn">About me</a>
         </nav>
 
-        <body>
-            <h1>Contact Information</h1>
-            <h2>Email: Christophervann123@gmail.com</h2>
-            <h3>Phone: 330-749-2251</h3>
-        </body>
-        <footer>
+        <div class = "subpage">
+            <h6>Contact <span>Information</span></h6>
+            <h7>Email: Christophervann123@gmail.com</h7>
+            <h7>Phone: 330-749-2251</h7>
+        </div>
+        <footer2>
             <p>Christopher Vann Additional Information</p>
-            <div class = "social">
+            <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end">Website Created By Christopher Vann</p>
-        </footer>
+        </footer2>
     </body>
     </html>
     
