--- a/projects.html
+++ b/projects.html
@@ -23,21 +23,22 @@
             <a href="#" class = "btn">About me</a>
         </nav>
 
-        <body>
-            <h1>My Projects</h1>
-            <h2>Eyetracking Fixation Project: LINK</h2>
-        </body>
+        <div class = "subpage">
+            <h6>My <span>Projects</span></h6>
+            <h7>Eyetracking Fixation Project: LINK</h7>
+            <h7>Portfolio Website: LINK</h7>
+        </div>
 
-        <footer>
+        <footer2>
             <p>Christopher Vann Additional Information</p>
-            <div class = "social">
+            <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end">Website Created By Christopher Vann</p>
-        </footer>
+        </footer2>
     </body>
     </html>
     
