--- a/skills.html
+++ b/skills.html
@@ -23,23 +23,23 @@
             <a href="#" class = "btn">About me</a>
         </nav>
 
-        <body>
-            <h1>My Experience</h1>
-            <h2>Proficient in Python, C, and SQL</h2>
-            <h3>Experience with HTML, CSS, and Database systems</h3>
-            <h4>Leadership experience through tutoring Computer Science students</h4>
-        </body>
+        <div class = "subpage">
+            <h6>My <span>Experience</span></h6>
+            <h7>Proficient in Python, C, and SQL</h7>
+            <h7>Experience with HTML, CSS, and Database systems</h7>
+            <h7>Leadership experience through tutoring Computer Science students</h7>
+        </div>
 
-        <footer>
+        <footer2>
             <p>Christopher Vann Additional Information</p>
-            <div class = "social">
+            <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end">Website Created By Christopher Vann</p>
-        </footer>
+        </footer2>
     </body>
     </html>
     
