--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <h2 class="logo">My<span>Portfolio</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contact.html">Contact</a></li>
