--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!---Contact Me----->
     <div class="contact-me">
         <p>Contact Page</p>
-        <a class ="button-two" href = "#">Contact Information</a>
+        <a class ="button-two" href = "contact.html">Contact Information</a>
     </div>
 
     <!---footer start---->
