--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         <!-- Make this section for Github and linkedin learning link -->
-        <p class = "end">Website Created By Christopher Vann</p>
+        <p class = "end2">Website Created By Christopher Vann</p>
         </footer2>
     </body>
     </html>
