--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <h7>Portfolio Website: LINK</h7>
         </div>
 
-        <footer2>
+        <footer>
             <p>Christopher Vann Additional Information</p>
             <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
@@ -38,7 +38,7 @@
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end2">Website Created By Christopher Vann</p>
-        </footer2>
+        </footer>
     </body>
     </html>
     
