--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         </div>
 
         <footer>
-            <p>Christopher Vann Additional Information</p>
+            <p class = "footer2">Christopher Vann Additional Information</p>
             <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
