--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <h7>Phone: 330-749-2251</h7>
         </div>
         <footer>
-            <p>Christopher Vann Additional Information</p>
+        <p class = "footer2">Christopher Vann Additional Information</p>
             <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
