--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
             <h7>Email: Christophervann123@gmail.com</h7>
             <h7>Phone: 330-749-2251</h7>
         </div>
-        <footer>
-        <p class = "footer2">Christopher Vann Additional Information</p>
+        <footer2>
+        <p>Christopher Vann Additional Information</p>
             <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -37,7 +37,7 @@
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end2">Website Created By Christopher Vann</p>
-        </footer>
+        </footer2>
     </body>
     </html>
     
