--- a/skills.html
+++ b/skills.html
@@ -30,8 +30,8 @@
             <h7>Leadership experience through tutoring Computer Science students</h7>
         </div>
 
-        <footer>
-            <p class = "footer2">Christopher Vann Additional Information</p>
+        <footer2>
+            <p>Christopher Vann Additional Information</p>
             <div class = "social2">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -39,7 +39,7 @@
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end2">Website Created By Christopher Vann</p>
-        </footer>
+        </footer2>
     </body>
     </html>
     
