--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <footer>
         <p>Christopher Vann Additional Information</p>
         <div class = "social">
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/Chrisvann1"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/christopher-vann-87721b228/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/chris_vann51/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     <!-- Make this section for Github and linkedin learning link -->
     <p class = "end">Website Created By Christopher Vann</p>
