--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <a href="#" class = "btn">About me</a>
+            <a href="#section1" class = "btn">About me</a>
         </nav>
 
         <div class = "content">
@@ -39,6 +39,7 @@
     <!----About Section Start-->
 
     <section class="about">
+        <a name="section1">Section 1</a>
         <div class = "main">
             <!-- <img src="about2.jpg"> -->
             <div class = "about-text">
