--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <a href="#" class = "btn">About me</a>
+            <a href="#section1" class = "btn">About me</a>
         </nav>
 
         <div class = "subpage">
