--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
     <!----About Section Start-->
 
     <section class="about">
-        <a name="section1">Section 1</a>
         <div class = "main">
             <!-- <img src="about2.jpg"> -->
             <div class = "about-text">
-                <h2>About Me</h2>
+                <h2 id = "section1">About Me</h2>
                 <h5>Computer Science <span>Student</span></h5>
                 <p> I am pursuing a career in computer science. I have proficient in the coding languages of Python, C, and SQL and I have 
                     experience with HTML and CSS. Additionally, I have experience with database systems through my research relating to 
