--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class = "newslatter">
                 <form>
                     <input type = "email" name = "email" id = "mail" placeholder = "Enter Your Email">
-                    <input type = "submit" name = "submit" value = "Lets Start">
+                    <input type = "submit" name = "submit" value = "Let's Connect">
                 </form>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 <p> I am pursuing a career in computer science. I have proficient in the coding languages of Python, C, and SQL and I have 
                     experience with HTML and CSS. Additionally, I have experience with database systems through my research relating to 
                     eyetracking fixations... gotta write more later </p>
-                    <button type= "button">Let's Talk</button>
+                    <!-- <button type= "button">Let's Talk</button> -->
             </div>
         </div>
 
