--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class = "about-text">
                 <h2 id = "section1">About Me</h2>
                 <h5>Computer Science <span>Student</span></h5>
-                <p> I am pursuing a career in computer science. I have proficient in the coding languages of Python, C, and SQL and I have 
-                    experience with HTML and CSS. Additionally, I have experience with database systems through my research relating to 
-                    eyetracking fixations... gotta write more later </p>
+                <p> Hello, my name is Christopher Vann and I am pursuing a career in computer science at The College of Wooster. I am proficient in the coding languages of Python, C, C++, and SQL and I have 
+                    experience with HTML and CSS. Additionally, I have experience with designing and managing databases through my research relating to 
+                    eyetracking fixations I conducted the summer before my sophomore year of college. I am looking for summer and winter internship to gain more experience in the field </p>
                     <!-- <button type= "button">Let's Talk</button> -->
             </div>
         </div>
