--- a/skills.html
+++ b/skills.html
@@ -25,9 +25,8 @@
 
         <div class = "subpage">
             <h6>My <span>Experience</span></h6>
-            <h7>Proficient in Python, C, and SQL</h7>
-            <h7>Experience with HTML, CSS, and Database systems</h7>
-            <h7>Leadership experience through tutoring Computer Science students</h7>
+            <h7>Proficient in Python, C, C++, and LaTeX</h7>
+            <h7>Experience with SQL, HTML, and CSS</h7>
         </div>
 
         <footer2>
