--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             <div class = "social2">
                 <a href="https://github.com/Chrisvann1"><i class="fa-brands fa-github"></i></a>
                 <a href="www.linkedin.com/in/christopher-vann-7524082a8"><i class="fa-brands fa-linkedin"></i></a>
-                <!--- <a href="https://www.instagram.com/chris_vann51/"><i class="fa-brands fa-instagram"></i></a> -->
+                <a href="https://www.instagram.com/chris_vann51/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         <!-- Make this section for Github and linkedin learning link -->
         <p class = "end2">Website Created By Christopher Vann</p>
