--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
         <div class = "subpage">
             <h6>Contact <span>Information</span></h6>
-            <h7>Email: Christophervann123@gmail.com</h7>
+            <h7>Email: Christopherdvann123@gmail.com</h7>
             <h7>Phone: 330-749-2251</h7>
         </div>
         <footer2>
