--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,9 @@
 
         <div class = "subpage">
             <h6>My <span>Projects</span></h6>
-            <h7>Eyetracking Fixation Project: LINK</h7>
-            <h7>Portfolio Website: LINK</h7>
+            <h7>Film Review Website</h7>
+            <h7>Eyetracking Fixation Project/h7>
+            <h7>Portfolio Website</h7>
         </div>
 
         <footer2>
