--- a/skills.html
+++ b/skills.html
@@ -27,6 +27,9 @@
             <h6>My <span>Experience</span></h6>
             <h7>Proficient in Python, C, C++, and LaTeX</h7>
             <h7>Experience with SQL, HTML, and CSS</h7>
+            <h7>Eye tracking research assistant - Database Construction</h7>
+            <h7>Stock market prediction research assistant - Deep Learning</h7>
+            <h7>Python Zone Intern - Tutor</h7>
         </div>
 
         <footer2>
