--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             <div class = "about-text">
                 <h2 id = "section1">About Me</h2>
                 <h5>Computer Science <span>Student</span></h5>
-                <p> Hello, my name is Christopher Vann and I am pursuing a career in computer science at The College of Wooster. I am proficient in the coding languages of Python, C, C++, and SQL and I have 
-                    experience with HTML and CSS. Additionally, I have experience with designing and managing databases through my research relating to 
-                    eyetracking fixations I conducted the summer before my sophomore year of college. I am looking for summer and winter internship to gain more experience in the field </p>
+                <p> Hello, my name is Christopher Vann and I am pursuing a Computer Science major with a Mathematics minor at The College of Wooster. 
+                    I have experience with Python, C++, C, SQL, HTML, and C++. Furthermore, I have taken on research assistant positions relating to 
+                    building a database for eyetracking data and exploring deep learning in relation to stock market prediction. 
+                    I am eager to pursue summer and winter internships to gain more experience in the field </p>
                     <!-- <button type= "button">Let's Talk</button> -->
             </div>
         </div>
